# opengl-model-viewer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
libs/assimp/: CMakeLists.txt
libs/assimp/code/: CMakeLists.txt
libs/assimp/code/AssetLib/glTF/: glTFAsset.h
libs/assimp/code/AssetLib/glTF2/: glTF2Asset.h
libs/assimp/contrib/gtest/cmake/: internal_utils.cmake
libs/assimp/contrib/zip/: CMakeLists.txt
libs/assimp/scripts/android_crosscompile/: make_android.bat
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glm/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/imgui_filebrowser/: CMakeLists.txt
libs/stb/: CMakeLists.txt
libs/tinyobjloader/: CMakeLists.txt  tiny_obj_loader.h
shaders/: fs.frag  vs.vert
src/: camera.cpp  camera.hpp  input.cpp  input.hpp  main.cpp  model.cpp  model.hpp  model_loader.cpp  model_loader.hpp  opengl_context.cpp  opengl_context.hpp  shader.cpp  shader.hpp  ui_context.cpp  ui_context.hpp  ui_panel.cpp  ui_panel.hpp
src/model/: mesh.cpp  mesh.hpp  model.cpp  model.hpp
src/panels/: scene_panel.cpp  scene_panel.hpp  settings_panel.cpp  settings_panel.hpp
